@@ -87,3 +87,10 @@ Feature: Multi Elements
     And the text for cell 2 should be "Data 2"
     And the text for cell 3 should be "Data 3"
 
+  Scenario: Selecting images
+    When I select the images with class "image"
+    Then I should have 3 images
+    And the alt for image 1 should be "image 1"
+    And the alt for image 2 should be "image 2"
+    And the alt for image 3 should be "image 3"
+
