@@ -421,6 +421,21 @@ module PageObject
     end
     
     #
+    # Finds all images that match the provided identifier
+    #
+    # @param [Hash] identifier how we find an image.  You can use a multiple paramaters
+    #   by combining of any of the following except xpath.  The valid keys are:
+    #   * :class => Watir and Selenium
+    #   * :id => Watir and Selenium
+    #   * :index => Watir and Selenium
+    #   * :name => Watir and Selenium
+    #   * :xpath => Watir and Selenium
+    #
+    def image_elements(identifier)
+      platform.images_for(identifier.clone)
+    end
+    
+    #
     # Finds a form
     #
     # @param [Hash] identifier how we find a form.  You can use a multiple paramaters
